syntax = "proto3";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
//import "google/protobuf/field_mask.proto";

package littlebird.article.v1;

// ArticleService provide all operations related to articles
service ArticleService {
    // List articles
    rpc List(ListRequest) returns (ListResponse) {
    }
    // ListCreatedBy list articles by a specific user
    rpc ListCreatedBy (ListCreatedByRequest) returns (ListResponse) {
    }
    // Delete delete an article
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty) {
    }
    // Get get a specific article
    rpc Get(GetRequest) returns (Article) {
    }
    // Update update a specific article
    rpc Update(UpdateRequest) returns (google.protobuf.Empty) {
    }
    // Update update a specific article
    rpc Create(CreateRequest) returns (CreateResponse) {
    }
}

message CreateRequest {
    Article article = 1;
}
message CreateResponse {
    string id = 1;
}

message TrendingRequest {
    int64 offset = 1;
    int64 limit = 2;
}

message UpdateRequest {
    string id = 1;
    Article article = 2;
}

message ListCreatedByRequest {
    string owner_id = 1;    
}

message GetRequest {
    string id = 1;
}

message DeleteRequest {
    string id = 1;
}

message ListRequest {
    int64 offset = 1;
    int64 limit = 2;
}

message ListResponse {
    repeated Article articles = 1;
}

message Article {
    string id = 1;
	string title = 2;
	string content = 3;
	string last_update = 4;

	string created_by = 5;
	string created_by_id = 6;
}